--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <h1>Привет мир</h1>
+  <div class="header">
+    <form class="Search">
+      <input type="text">
+      <button>Поиск</button>
+    </form>
+  </div>
+    <div class="content">
+      <div class="box">Новость 1</div>
+      <div class="box">Новость 2</div>
+      <div class="box">Новость 3</div>
+      <div class="box">Новость 4</div>
+      <div class="box">Новость 5</div>
+    </div>
   
 </body>
 </html>
