--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="header">
-    <form class="Search">
+    <form class="search">
       <input type="text">
       <button>Поиск</button>
     </form>
